--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@ The following definitions shall have the same meaning regardless of whether they
     <string name="string_btn_settings">settings</string>
     <string name="string_speedometer_logo">Speedometer logo</string>
     <string name="string_speedometer_splash_logo">speedometer splash logo</string>
+    <string name="string_coming_soon">Coming Soon</string>
     <!-- Preference Titles -->
 
     <!-- Messages Preferences -->
