--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@ The following definitions shall have the same meaning regardless of whether they
     <string name="string_speedometer_logo">Speedometer logo</string>
     <string name="string_speedometer_splash_logo">speedometer splash logo</string>
     <string name="string_coming_soon">Coming Soon</string>
+    <string name="string_digital">digital</string>
     <!-- Preference Titles -->
 
     <!-- Messages Preferences -->
