--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,7 +131,7 @@ The following definitions shall have the same meaning regardless of whether they
     <string name="string_accuracy">NA</string>
     <string name="string_accuracy1">Accuracy:</string>
     <string name="string_current_location">Current Location</string>
-    <string name="string_100">100</string>
+    <string name="string_100">0</string>
     <string name="string_unit_type">Unit type</string>
     <string name="string_threedpoint">%.3f</string>
     <string name="string_dialog_internet">No Internet Connection Available. Address might not be available. Tap to close</string>
@@ -141,6 +141,7 @@ The following definitions shall have the same meaning regardless of whether they
     <string name="string_speedometer_splash_logo">speedometer splash logo</string>
     <string name="string_coming_soon">Coming Soon</string>
     <string name="string_digital">digital</string>
+    <string name="banner_ad_unit_id">ca-app-pub-4556038061649547/7471321322</string>
     <!-- Preference Titles -->
 
     <!-- Messages Preferences -->
